# TSAI_ERA_V4_Session4_NN

./: .gitignore  Neural_Network_MNIST_V1.0.ipynb  Neural_Network_MNIST_V2.0.ipynb  README.md  main.py  pyproject.toml  train_mnist.py
src/config/: settings.py
src/data/: dataset.py
src/models/: neural_network.py
src/training/: trainer.py
